test/fixtures/compile/parameter/parameter.return.xn_iy.xe.ks
func foobar(x % _) {
	return x
}